--- a/projects/ngx-material-tracking-showcase/src/app/app.component.html
+++ b/projects/ngx-material-tracking-showcase/src/app/app.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button (click)="openGdpr()">Open GDPR</button>
+<button type="button" mat-raised-button (click)="openGdpr()">Open GDPR</button>
