--- a/projects/ngx-material-tracking/src/components/gdpr-dialog/gdpr-dialog.component.scss
+++ b/projects/ngx-material-tracking/src/components/gdpr-dialog/gdpr-dialog.component.scss
@@ -22,7 +22,7 @@ mat-panel-title {
         gap: 5px;
         margin-left: auto;
 
-        i {
+        fa-icon {
             font-size: 120%;
         }
     }
